--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/BackgroundColour"
+    android:fontFamily="@font/roboto"
     tools:context=".ui.main_menu.MainMenuActivity">
 
     <Button
