--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -19,6 +19,8 @@
         android:layout_marginRight="158dp"
         android:text="@string/returnButton"
         app:backgroundTint="@color/ButtonColour"
+        android:textColor="@color/ButtonTextColor"
+        android:fontFamily="@font/roboto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.039"
@@ -32,7 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="268dp"
         android:text="@string/AddCardButton"
+        android:textColor="@color/ButtonTextColor"
         app:backgroundTint="@color/ButtonColour"
+        android:fontFamily="@font/roboto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,6 +48,8 @@
         android:layout_marginTop="72dp"
         android:text="@string/ShowCardButton"
         app:backgroundTint="@color/ButtonColour"
+        android:textColor="@color/ButtonTextColor"
+        android:fontFamily="@font/roboto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
