--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,8 +73,10 @@
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login_text"
+        android:text="@string/Login_text"
         app:backgroundTint="@color/ButtonColour"
+        android:fontFamily="@font/roboto"
+        android:textColor="@color/ButtonTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -88,6 +90,8 @@
         android:layout_height="wrap_content"
         android:text="@string/register_text"
         app:backgroundTint="@color/ButtonColour"
+        android:textColor="@color/ButtonTextColor"
+        android:fontFamily="@font/roboto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
