--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,6 +20,8 @@
         android:text="@string/returnButton"
         app:backgroundTint="@color/ButtonColour"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/ButtonTextColor"
+        android:fontFamily="@font/roboto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.105"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,8 +78,10 @@
         android:layout_marginEnd="158dp"
         android:layout_marginRight="158dp"
         android:layout_marginBottom="301dp"
-        android:text="@string/register_text"
+        android:text="@string/Register"
+        android:textColor="@color/ButtonTextColor"
         app:backgroundTint="@color/ButtonColour"
+        android:fontFamily="@font/roboto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
