--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/registerNewUserButton"
+        android:id="@+id/RetrivePassword"
         android:layout_width="121dp"
         android:layout_height="61dp"
         android:layout_marginStart="158dp"
