--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="DeepGray">#386fa4</color>
     <color name="TopBar">#2A537A</color>
     <color name="ButtonTextColor">#dfdfe5</color>
+    <color name="NoColor">#00000000</color>
 
 </resources>
