--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.retrivePassword.ForgotPasswordActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/RetrivePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="139dp"
@@ -33,9 +33,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="196dp"
         android:layout_marginEnd="24dp"
-        android:autoText="false"
         android:hint="@string/prompt_email"
-        android:inputType="@string/prompt_email"
         android:selectAllOnFocus="true"
         android:textColor="@color/white"
         android:textColorHighlight="#74FFFFFF"
@@ -44,6 +42,21 @@
         android:textCursorDrawable="@color/ButtonColour"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/returnButtonForgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="303dp"
+        android:layout_marginRight="303dp"
+        android:layout_marginBottom="118dp"
+        android:text="@string/returnButton"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
