--- a/app/src/main/res/layout/activity_show_cards.xml
+++ b/app/src/main/res/layout/activity_show_cards.xml
@@ -32,6 +32,7 @@
         android:layout_height="613dp"
         android:layout_marginTop="59dp"
         android:visibility="visible"
+        android:numColumns="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +49,7 @@
         android:layout_marginEnd="157dp"
         android:layout_marginRight="157dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/Test_button"
+        android:text="@string/Show_Active_Cards"
         app:layout_constraintBottom_toTopOf="@+id/CardList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
