--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -78,10 +78,10 @@
         android:layout_marginEnd="158dp"
         android:layout_marginRight="158dp"
         android:layout_marginBottom="301dp"
-        android:text="@string/Register"
+        android:fontFamily="@font/roboto"
+        android:text="@string/Register_Text"
         android:textColor="@color/ButtonTextColor"
         app:backgroundTint="@color/ButtonColour"
-        android:fontFamily="@font/roboto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
