--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -33,11 +33,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="380dp"
+        android:layout_marginBottom="3dp"
         android:fontFamily="@font/roboto"
         android:text="@string/AddCardButton"
         android:textColor="@color/ButtonTextColor"
-        app:backgroundTint="@color/ButtonColour"
 
+        app:backgroundTint="@color/ButtonColour"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,22 +64,20 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/messageToWrite"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="127dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginRight="128dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="41dp"
         android:fontFamily="@font/roboto"
         android:text="@string/Write_To_Tag"
         android:textColor="@color/ButtonTextColor"
         app:backgroundTint="@color/ButtonColour"
         app:layout_constraintBottom_toTopOf="@+id/messageToWrite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.198"
+        app:layout_constraintEnd_toStartOf="@+id/readTag"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         tools:ignore="MissingConstraints" />
 
     <EditText
@@ -98,15 +98,21 @@
         android:id="@+id/readTag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="41dp"
         android:fontFamily="@font/roboto"
         android:text="READ NFC TAG"
         android:textColor="@color/ButtonTextColor"
         app:backgroundTint="@color/ButtonColour"
         app:layout_constraintBottom_toTopOf="@+id/messageToWrite"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintStart_toEndOf="@+id/writeToTag"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.765" />
+        app:layout_constraintVertical_bias="0.217" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
