--- a/app/src/main/res/layout/activity_show_cards.xml
+++ b/app/src/main/res/layout/activity_show_cards.xml
@@ -29,29 +29,15 @@
     <ListView
         android:id="@+id/CardList"
         android:layout_width="409dp"
-        android:layout_height="613dp"
+        android:layout_height="475dp"
         android:layout_marginTop="59dp"
-        android:visibility="visible"
         android:numColumns="2"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/returnButtonShowCards"
+        app:layout_constraintVertical_bias="1.0"
         tools:visibility="visible" />
 
-    <Button
-        android:id="@+id/Test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="162dp"
-        android:layout_marginLeft="162dp"
-        android:layout_marginTop="62dp"
-        android:layout_marginEnd="157dp"
-        android:layout_marginRight="157dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/Show_Active_Cards"
-        app:layout_constraintBottom_toTopOf="@+id/CardList"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
