Added a back button to the toolbar instead of having return button in every activity. Made an abstract class for every activity that handles all setups of tollbars and menus. Leaving a lot less duplicated code. Added a settings menu. Functions for it to be added still. Added a logout fucntion to the toolbar menu.

--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -2,5 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Logout" />
+    <item
+        android:id="@+id/SettingsMenuItem"
+        android:title="Settings" />
+    <item
+        android:id="@+id/logoutMenuItem"
+        android:title="Logout" />
 </menu>
