--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -4,28 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DeepGray"
+    android:background="@color/BackgroundColour"
     android:fontFamily="@font/roboto"
     tools:context=".ui.nfcUNUSED.AddNFCActivity">
-
-    <Button
-        android:id="@+id/addCardReturnButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/returnButton"
-        android:textColor="@color/ButtonTextColor"
-        app:backgroundTint="@color/ButtonColour"
-        app:iconTint="@color/BackgroundColour"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
 
     <Button
