--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,31 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/BackgroundColour">
 
     <Switch
         android:id="@+id/darkModeSwitch"
-        android:layout_width="385dp"
-        android:layout_height="65dp"
+        android:layout_width="381dp"
+        android:layout_height="92dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:layout_weight="1"
         android:fontFamily="@font/roboto"
+        android:scrollbarThumbHorizontal="@color/Diamond"
+        android:scrollbarThumbVertical="@color/Diamond"
         android:text="Dark Mode   🌙"
         android:textSize="18sp"
+        android:thumbTint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.224" />
+        app:layout_constraintVertical_bias="0.121" />
+
+    <EditText
+        android:id="@+id/updateOldPassword"
+        android:layout_width="277dp"
+        android:layout_height="51dp"
+        android:ems="10"
+        android:hint="Old Password"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/updateNewPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.388"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/darkModeSwitch"
+        app:layout_constraintVertical_bias="0.953" />
+
+    <EditText
+        android:id="@+id/updateNewPassword"
+        android:layout_width="279dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="240dp"
+        android:ems="10"
+        android:hint="New Password"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.393"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btnToggleDark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="165dp"
-        tools:layout_editor_absoluteY="287dp" />
+        android:id="@+id/updatePasswordButton"
+        android:layout_width="144dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="192dp"
+        android:layout_marginLeft="192dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginBottom="177dp"
+        android:text="Update Password"
+        android:textColor="@color/ButtonTextColor"
+        app:backgroundTint="@color/ButtonColour"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updateNewPassword" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
