--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -34,6 +34,9 @@
         android:ems="10"
         android:hint="Old Password"
         android:inputType="textPassword"
+        android:textColor="@color/ButtonTextColor"
+        android:textColorHighlight="#74FFFFFF"
+        android:textColorHint="#74FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/updateNewPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.388"
@@ -49,6 +52,9 @@
         android:ems="10"
         android:hint="New Password"
         android:inputType="textPassword"
+        android:textColor="@color/ButtonTextColor"
+        android:textColorHighlight="#74FFFFFF"
+        android:textColorHint="#74FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.393"
